adding some unrelated tables to index.html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
 	<body>
 		<h1>Some random heading</h1>
 		<h2>The next sub heading</h2>
-		<img src="images/blackhole.jpg">
+		<p>Fruits:
+			<ul>
+				<li>Apples</li>
+				<li>Oranges</li>
+				<li>Pomegranate</li>
+			</ul>
+		</p>
+		<p>Cars:
+			<ol>
+				<li>Ferrari</li>
+				<li>BMW</li>
+				<li>Benz</li>
+			</ol>
+		</p>
+		<p>
+			<table border="1px">
+				<tr>
+					<th>Name</th>
+					<th>age</th>
+					<th>designation</th>
+				</tr>
+				<tr>
+					<td>Rahul</td>
+					<td>27</td>
+					<td>SDET</td>
+				</tr>
+				<tr>
+					<td>Shrenik</td>
+					<td>24</td>
+					<td>SDET</td>
+				</tr>
+			</table>
+		</p>
+		<img src="images/blackhole.jpg" width="50%">
 	</body>
 </html>
