--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 				<li>Benz</li>
 			</ol>
 		</p>
+		<p>Weathers:
+			<ol>
+				<li>Winter</li>
+				<li>Spring</li>
+				<li>Summmer</li>
+				<li>Autumn</li>
+			</ol>
+		</p>
 		<p>
 			<table border="1px">
 				<tr>
