added cricketers in test-edit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 				<li>Benz</li>
 			</ol>
 		</p>
+		<p>Cricketers:
+			<ol>
+				<li>Kolhli</li>
+				<li>DeViliiers</li>
+				<li>Smith</li>
+			</ol>
+		</p>
 		<p>
 			<table border="1px">
 				<tr>
